--- a/index.html
+++ b/index.html
@@ -55,16 +55,26 @@
     </tr>
     <tr>
         <td>HTML</td>
-        <td>⭐⭐⭐⭐</td>
+        <td>⭐⭐⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>Data Structures</td>
-      <td>⭐⭐</td>
+      <td>CSS</td>
+      <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>JavaScript</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>MySQL</td>
+      <td>⭐⭐⭐</td>
     </tr>
 </table>
 <hr>
+<h3>Hobbies</h3>
 <a href="Hobbies.html">My Hobbies</a>
 <br>
-<a href="contact.html">Contact Details</a>
+<h3>Contact Details</h3>
+<a href="contact.html" target="_blank">Contact Details</a>
   </body>
 </html>
